--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  connectivity: ^3.0.6
+  connectivity_plus: ^2.0.2
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter:
@@ -37,6 +37,7 @@ dependencies:
   freezed_annotation: ^0.15.0
   get_it: ^7.2.0
   http: ^0.13.4
+  internet_connection_checker: ^0.0.1+3
   json_annotation: ^4.3.0
   shared_preferences: ^2.0.8
 
