--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,11 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+
+  integration_test:
+    sdk: flutter
   freezed: ^0.15.0+1
+  # integration_test: ^1.0.2+3
   json_serializable: ^6.0.1
   mockito: ^5.0.16
 
